# horizen-migration

./: .gitignore  CHANGELOG.md  README.md
daa_sim/: README.md  difficulty_adj_algo_sim.py
dump-scripts/: README.md  create_restore_artifacts.sh  run.sh
dump-scripts/automappings/: README.md  mainnet.json  testnet.json
dump-scripts/python/: README.md  check_addresses_balance_from_eon.py  check_addresses_balance_from_zend.py  check_total_balance_from_zend.py  get_all_forger_stakes.py  pyproject.toml  requirements.txt  setup_eon2_json.py  zend_to_horizen.py
dump-scripts/python/horizen_dump_scripts/: check_addresses_balance_from_eon.py  check_addresses_balance_from_zend.py  check_total_balance_from_zend.py  get_all_forger_stakes.py  migrationhash.py  setup_eon2_json.py  utils.py  zend_to_horizen.py
dump-scripts/python/test_data/: README.md  mapping.json  zend_dump.csv
erc20-migration/: .env.template  .env.template.mainnet  .env.test  README.md  hardhat.config.js  package-lock.json  package.json
erc20-migration/contracts/: ClaimableZenErc20.sol  EONBackupVault.sol  LinearTokenVesting.sol  VerificationLibrary.sol  ZTEST.sol  ZTESTBackupVault.sol  ZTESTZendBackupVault.sol  ZenMigrationFactory.sol  ZenToken.sol  ZendBackupVault.sol
erc20-migration/test/: contract_factory_test.js  dump.json  eon_test.js  mytest.js  utils.js  vesting_setup_test.js  vesting_test.js  vesting_updates_test.js  zenclaim_test.js  zentoken_test.js
snapshots/: README.md
snapshots/mainnet/: eon.json  zend.json.migrationhash
snapshots/mainnet_dry-run/: eon.json
(+58 files in other folders)
