[project]
name = "horizen_dump_scripts"
version = "1.3.2"
authors = [
    { name="Horizen - Zen Blockchain Foundation", email="infrastructure@zensystem.io" },
]
description = "Horizen Migration dump scripts"
requires-python = ">=3.10"
dependencies = [
    "web3",
    "base58",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HorizenOfficial/horizen-migration"
"Bug Tracker" = "https://github.com/HorizenOfficial/horizen-migration/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["horizen_dump_scripts"]

[project.scripts]
get_all_forger_stakes = "horizen_dump_scripts.get_all_forger_stakes:main"
zend_to_horizen = "horizen_dump_scripts.zend_to_horizen:main"
setup_eon2_json = "horizen_dump_scripts.setup_eon2_json:main"
check_addresses_balance_from_eon = "horizen_dump_scripts.check_addresses_balance_from_eon:main"
check_addresses_balance_from_zend = "horizen_dump_scripts.check_addresses_balance_from_zend:main"
check_total_balance_from_zend =  "horizen_dump_scripts.check_total_balance_from_zend:main"
migrationhash =  "horizen_dump_scripts.migrationhash:main"